--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2.1
 executors:
-    docker-publisher:
-      working_directory: ~/cci-film-ratings # directory where steps will run
-      environment:
-        IMAGE_NAME: obelyks/film-ratings-app
-      docker:
-        - image: circleci/buildpack-deps:stretch
+  docker-publisher:
+    working_directory: ~/cci-film-ratings # directory where steps will run
+    environment:
+      IMAGE_NAME: obelyks/film-ratings-app
+    docker:
+      - image: circleci/buildpack-deps:stretch
 jobs:
   build:
     working_directory: ~/cci-film-ratings # directory where steps will run
@@ -25,29 +25,29 @@ jobs:
           key: film-ratings-{{ checksum "project.clj" }}
       - run: lein do test, uberjar
       - persist_to_workspace:
-            root: ~/cci-film-ratings
-            paths:
-                - target
+          root: ~/cci-film-ratings
+          paths:
+            - target
   build-docker:
-     executor: docker-publisher
-     steps:
-       - checkout
-       - attach_workspace:
-           at: .
-       - setup_remote_docker
-       - run:
-           name: Build latest Docker image
-           command: docker build . -t $IMAGE_NAME:latest
-       - run:
-           name: Build tagged Docker image
-           command: docker build . -t $IMAGE_NAME:${CIRCLE_TAG}
-       - run:
-           name: Archive Docker image
-           command: docker save -o image.tar $IMAGE_NAME
-       - persist_to_workspace:
-           root: ~/cci-film-ratings
-           paths:
-             - ./image.tar                  
+    executor: docker-publisher
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - setup_remote_docker
+      - run:
+          name: Build latest Docker image
+          command: docker build . -t $IMAGE_NAME:latest
+      - run:
+          name: Build tagged Docker image
+          command: docker build . -t $IMAGE_NAME:${CIRCLE_TAG}
+      - run:
+          name: Archive Docker images
+          command: docker save -o image.tar $IMAGE_NAME
+      - persist_to_workspace:
+          root: ~/cci-film-ratings
+          paths:
+            - ./image.tar
   publish-docker:
     executor: docker-publisher
     steps:
