--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,8 @@ workflows:
   main:
     jobs:
       - build
+      - build-docker
+      - publish-docker
   build_and_deploy:
     jobs:
       - build:
