--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,9 @@ jobs:
             docker push $IMAGE_NAME:${CIRCLE_TAG}
 workflows:
   version: 2
+  main:
+    jobs:
+      - publish-docker
   build_and_deploy:
     jobs:
       - build:
